Integración backend fase final y preparación deploy