@@ -6,7 +6,6 @@ import com.tienditayeya.tyback_end.repository.DetallePedidoRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class DetallePedidoService {
@@ -17,63 +16,59 @@ public class DetallePedidoService {
         this.detallePedidoRepository = detallePedidoRepository;
     }
 
-    // Método para listar todos (mapeando de Entidad a DTO)
     public List<DetallePedidoDTO> findAll() {
-        return detallePedidoRepository.findAll().stream()
-                .map(this::convertToDTO)
-                .collect(Collectors.toList());
+        return detallePedidoRepository.findAll().stream().map(this::convertToDTO).toList();
     }
 
-    // Buscar por ID
     public DetallePedidoDTO findById(Long id) {
-        DetallePedido detalle = detallePedidoRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Detalle de pedido no encontrado con ID: " + id));
-        return convertToDTO(detalle);
-    }
-
-    // Buscar por ID de pedido
-    public List<DetallePedidoDTO> findByPedidoId(Long pedidoId) {
-        // Si tu repositorio tiene el método findByPedidoId, úsalo aquí.
-        // Si no, puedes retornar una lista filtrada o adaptarla según tu base de datos.
-        return detallePedidoRepository.findAll().stream()
+        return detallePedidoRepository.findById(id)
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .orElseThrow(() -> new RuntimeException("Detalle de pedido no encontrado con ID: " + id));
     }
 
-    // Guardar un nuevo registro
+    public List<DetallePedidoDTO> findByPedidoId(Long pedidoId) {
+        return detallePedidoRepository.findByPedidosIdPedidos(pedidoId).stream()
+                .map(this::convertToDTO)
+                .toList();
+    }
+
     public DetallePedidoDTO save(DetallePedidoDTO dto) {
-        DetallePedido detalle = convertToEntity(dto);
-        DetallePedido saved = detallePedidoRepository.save(detalle);
-        return convertToDTO(saved);
+        return convertToDTO(detallePedidoRepository.save(convertToEntity(dto)));
     }
 
-    // Actualizar registro existente
     public DetallePedidoDTO update(Long id, DetallePedidoDTO dto) {
         DetallePedido existente = detallePedidoRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Detalle de pedido no encontrado para actualizar con ID: " + id));
 
-        // Aquí actualizas los campos necesarios según tu entidad
-        // existente.setCantidad(dto.getCantidad());
+        existente.setCantidad(dto.getCantidad());
+        existente.setPrecioTotalUnitario(dto.getPrecioTotalUnitario());
+        existente.setPedidosIdPedidos(dto.getPedidosIdPedidos());
+        existente.setProductosIdProductos(dto.getProductosIdProductos() == null ? null : dto.getProductosIdProductos().intValue());
 
-        DetallePedido updated = detallePedidoRepository.save(existente);
-        return convertToDTO(updated);
+        return convertToDTO(detallePedidoRepository.save(existente));
     }
 
-    // Eliminar por ID
     public void deleteById(Long id) {
         detallePedidoRepository.deleteById(id);
     }
 
-    // Métodos auxiliares de conversión (Entity <-> DTO)
     private DetallePedidoDTO convertToDTO(DetallePedido detalle) {
         DetallePedidoDTO dto = new DetallePedidoDTO();
-        // Asigna los campos de detalle a dto según los getters/setters que tengas
+        dto.setIdDetallePedido(detalle.getIdDetallePedido());
+        dto.setCantidad(detalle.getCantidad());
+        dto.setPrecioTotalUnitario(detalle.getPrecioTotalUnitario());
+        dto.setPedidosIdPedidos(detalle.getPedidosIdPedidos());
+        dto.setProductosIdProductos(detalle.getProductosIdProductos() == null ? null : detalle.getProductosIdProductos().longValue());
         return dto;
     }
 
     private DetallePedido convertToEntity(DetallePedidoDTO dto) {
         DetallePedido detalle = new DetallePedido();
-        // Asigna los campos de dto a detalle según los getters/setters que tengas
+        detalle.setIdDetallePedido(dto.getIdDetallePedido());
+        detalle.setCantidad(dto.getCantidad());
+        detalle.setPrecioTotalUnitario(dto.getPrecioTotalUnitario());
+        detalle.setPedidosIdPedidos(dto.getPedidosIdPedidos());
+        detalle.setProductosIdProductos(dto.getProductosIdProductos() == null ? null : dto.getProductosIdProductos().intValue());
         return detalle;
     }
 }
